# PVSimulator

./: .gitignore  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  __init__.py  app.py  config.py  logging_config.py  models.py  pyproject.toml  requirements.txt  simulation.py  test_app.py  utils.py
frontend/: Dockerfile  README.md  angular.json  karma.conf.js  nginx.conf  package-lock.json  package.json
frontend/pv-simulator/: angular.json  karma.conf.js  package-lock.json  package.json
frontend/pv-simulator/src/: styles.css
frontend/pv-simulator/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
frontend/pv-simulator/src/app/components/chart/: chart.component.ts
frontend/pv-simulator/src/app/components/control/: control.component.ts
frontend/pv-simulator/src/app/services/: simulator.service.ts
frontend/src/: index.html
frontend/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
frontend/src/app/components/chart/: chart.component.spec.ts  chart.component.ts
frontend/src/app/components/control/: control.component.spec.ts  control.component.ts
frontend/src/app/services/: simulator.service.spec.ts  simulator.service.ts
